--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <META NAME="VIEWPORT" CONTENT="WIDTH-DEVICE-WIDTH" INTIAL SCALE="1.0"> </META>
         <TITLE> GET BOOKS ONLINE </TITLE>
     </HEAD>
-    <FRAMESET COLS="80% , 20%">
+    <FRAMESET COLS="80% , 20%" noresize frameborder="0">
         <FRAME SRC="MAIN.HTML"> </FRAME>
         <FRAME SRC="CONTENT.HTML"></FRAME>
         <FRAME NORESIZE></FRAME>
