--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
     <HEAD>
         <META NAME="VIEWPORT" CONTENT="WIDTH-DEVICE-WIDTH" INTIAL SCALE="1.0"> </META>
         <TITLE> GET BOOKS ONLINE </TITLE>
+          <link rel="icon" href="LOGO.png" type="image/x-icon">
+<link rel="shortcut icon" href="LOGO.png" type="image/x-icon">
+
     </HEAD>
     <FRAMESET COLS="80% , 20%" noresize frameborder="0">
         <FRAME SRC="MAIN.HTML"> </FRAME>
